examples/c/error-codes/violates-constraint/nonfatal/CV-TEAS2-bad-static.output
CV-TEAS2-bad-static.c:9:7: error: Incompatible pointer types in assignment.

    Constraint violation (CV-TEAS2):
        see C11 section 6.5.16.1:1 http://rvdoc.org/C11/6.5.16.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

